Version change for Swag and Documentation on handlers
